# ESPc

./: .clang-tidy  CMakeLists.txt  README.md  example.espl
Lexer/: Lexer.cpp  Lexer.hpp  Location.hpp  Token.cpp  Token.hpp
Tests/Lexer_Tests/: Test1.cpp
cmake/: CompileOptions.cmake
